Add completed section.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <input class="todoinput" placeholder="Do something..." type="text" />
         <button class="todoadd">Add</button>
     </div>
+    <h1>Completed...</h1>
+    <div class="completed">
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-git.js"></script>
