--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/styles.css"></link>
-  <title>Todo - By Luke Shimkus</title>
+  <title>Todos - By Luke Shimkus</title>
 </head>
 <body>
 
@@ -14,9 +14,9 @@
     </div>
     <div class="addflex">
         <input class="todoinput" placeholder="Do something..." type="text" />
-        <button class="todoadd">Add</button>
+        <button class="todoadd">&rightarrow;</button>
     </div>
-    <h1>Completed...</h1>
+    <h1>Completed.</h1>
     <div class="completed">
     </div>
 </div>
